Ajout dossier image

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Découverte de Github</h1>
+    <button>J'ai modifié un truc!</button>
+    <!--Rajouter une image et la mettre dans le readme-->
 </body>
 </html>
